--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>ss-snake</title>
-	<script type="text/javascript" src="snake.js"></script>
 	<script type="text/javascript" src="p5.min.js"></script>
+	<script type="text/javascript" src="snake.js"></script>
+	<script type="text/javascript" src="food.js"></script>
+	<script type="text/javascript" src="game.js"></script>
+	<style type="text/css">canvas{display:block;} body{margin:0;}</style>
 </head>
-<body style="margin:0;">
-
-</body>
+<body></body>
 </html>
